[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["Mattias Buelens <mattias@buelens.com>"]
edition = "2021"
rust-version = "1.56"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
